--- a/.github/workflows/simple_push_test.yml
+++ b/.github/workflows/simple_push_test.yml
@@ -8,7 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          submodules: true
 
       - name: Make a Change
         run: echo "Testing push" >> test.txt
